--- a/src/index.html
+++ b/src/index.html
@@ -21,11 +21,11 @@
   <meta charset="utf-8">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Start your development with a Dashboard for Bootstrap 4.">
-  <meta name="author" content="Creative Tim">
-  <title>Argon Dashboard Angular - Free Dashboard for Bootstrap 4</title>
+  <meta name="description" content="Mood check for yours collaborators">
+  <meta name="author" content="Spree">
+  <title>SPREE !</title>
   <!-- Favicon -->
-  <link href="./assets/img/brand/favicon0.png" rel="icon" type="image/png">
+  <link href="./assets/img/brand/spree-logo.png" rel="icon" type="image/png">
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
   <!-- Icons -->
