update workflow at 2si

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,11 @@
       integrity="sha384-DmApnD6sxb5o3sne6Z1OWorswF4pme4V3J+5tbvHNZLhO8I4Mw5nX6k1I1wwWSd"
       crossorigin="anonymous"
     />
-
+      <!-- <style>
+        body{
+          font: 15px "Poppins";
+        }
+      </style> -->
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY_HERE"></script> -->
   </head>
   <body>
